# coursesRegistrationSystem-Client

Client/: BGRsclient  CMakeLists.txt  makefile
Client/include/: connectionHandler.h
Client/src/: Client.cpp  connectionHandler.cpp  echoClient.cpp
